--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class and ID Selectors</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="bg-salmon">Number 1 - I'm a class!</p>
+    <div id="number-2">Number 2 - I'm one ID.</div>
+    <p class="bg-salmon lg-text">Number 3 - I'm a class, but cooler!</p>
+    <div id="number-4">Number 4 - I'm another ID.</div>
+    <p class="bg-salmon">Number 5 - I'm a class!</p>
   </body>
 </html>
